Fixed navbar dropdown being hard to see
Also cards on the index page have a standard size now for design consistency

--- a/resources/sass/custom.scss
+++ b/resources/sass/custom.scss
@@ -133,7 +133,7 @@ html {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: $salveMundi-boxShadow;
   min-width: 180px;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1);
   z-index: 1;
@@ -411,6 +411,10 @@ html {
   flex-direction: row;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.3) !important;
   margin: 10px;
+}
+
+.indexCard {
+  height: 260px;
 }
 
 .group {
